# wlp4-llvm

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  ast.cpp  baseAST.hpp  codegen.cpp  debug.hpp  driver.cpp  elem.cpp  elem.hpp  generator.hpp  main.cpp  parser.cpp  parser.hpp  recogniser.cpp  recogniser.hpp  scanner.cpp  scanner.hpp  state.cpp  state.hpp  symbol.hpp  syntax.cfg  token.hpp  tokeniser.cpp  tokeniser.hpp  wlp4c.cpp  wlp4check.cpp
ast/: arglist.cpp  arglist.hpp  astfwd.hpp  base.hpp  baseAST.hpp  dcl.cpp  dcl.hpp  expr.cpp  expr.hpp  factor.cpp  factor.hpp  idAST.hpp  lvalue.cpp  lvalue.hpp  procedure.cpp  procedure.hpp  procedureAST.hpp  statement.cpp  statement.hpp  term.cpp  term.hpp  test.cpp  test.hpp  type.hpp
example_programs/: 42.wlp4  array.wlp4  array_args_print.wlp4  array_args_print_reverse.wlp4  pointer.wlp4  print_args.wlp4
include/: elem.hpp  embedded_wain.hpp  parser.hpp  recogniser.hpp  state.hpp  symbol.hpp  token.hpp  tokeniser.hpp
include/ast/: arglist.hpp  astfwd.hpp  dcl.hpp  expr.hpp  factor.hpp  lvalue.hpp  procedure.hpp  statement.hpp  term.hpp  test.hpp  type.hpp
src/: codegen.cpp  elem.cpp  parser.cpp  recogniser.cpp  state.cpp  tokeniser.cpp
src/ast/: arglist.cpp  dcl.cpp  expr.cpp  factor.cpp  lvalue.cpp  procedure.cpp  statement.cpp  term.cpp  test.cpp
